# pydantic-ai-harness

./: .gitignore  README.md  agent_spec.md  pyproject.toml  smoke_test.py
examples/: 01_simple_tools.py  02_deps_factory.py  03_reuse_across_agent_and_mcp.py  04_session_deps.py  05_redis_session_store.py  docker-compose.yml
pydantic_ai_mcp/: __init__.py  _context.py  _prompt_adapter.py  _server.py  _tool_adapter.py
